# tiresias

./: .gitignore  README.md  ai_assistant.py  pyproject.toml  requirements.txt  vdo_and_ado.py  vdo_and_mic.py  video_analyzer.py  win.py  yolo.py
io-test/: main-native.py  play-sound.py
smolvlm/: call_smolvlm.py
